fix hero items aligned left

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -11,7 +11,6 @@
 }
 #hero .grid{
     align-items: center;
-    justify-items: center;
     height: 80vh;
 }
 #hero h1 {
